--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Charizard Cards</title>
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-    </style>
 </head>
 <body>
     <h1>Charizard</h1>
